[package]
name = "cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.10"
prost = "*"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }
actix-web = "4"
serde = { version = "1.0.196", features = ["derive"] }
clap = { version = "4.4.18", features = ["derive"] }

[build-dependencies]
tonic-build = "*"
bindgen = "0.65.1"
cc = "1.0"
